--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,13 +83,13 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.palondrome.caesaraimovies'
+    namespace "com.caesaraimovies"
     defaultConfig {
-        applicationId 'com.palondrome.caesaraimovies'
+        applicationId "com.caesaraimovies"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0.0"
+        versionName "1.0"
     }
     signingConfigs {
         debug {
