--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.4",
     "expo-linking": "~6.3.1",
+    "expo-navigation-bar": "^3.0.4",
     "expo-router": "~3.5.11",
     "expo-screen-orientation": "^7.0.4",
     "expo-splash-screen": "~0.27.4",
@@ -35,6 +36,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "^2.16.2",
+    "react-native-navigation-bar-color": "^2.0.2",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.6",
